I am correcting the collapse on all browser

--- a/style.css
+++ b/style.css
@@ -240,13 +240,13 @@ body {
 }
 
 .running-line-wrap-1 {
-  animation: marquee1 40s infinite linear;
-  animation-delay: -40s;
+  animation: marquee1 60s infinite linear;
+  animation-delay: -60s;
 }
 
 .running-line-wrap-2 {
-  animation: marquee2 40s infinite linear;
-  animation-delay: -20s; /* 40/2 = 20 */
+  animation: marquee2 60s infinite linear;
+  animation-delay: -30s; /* 40/2 = 20 */
 }
 
 @keyframes marquee1 {
@@ -868,10 +868,10 @@ td + td {
   .running-line-wrap-2 {
     padding: 10px 0;
   }
-  .running-line-wrap-1 {
+  /*  .running-line-wrap-1 {
     animation: marquee1 40s infinite linear;
     animation-delay: 0s;
-  }
+  } */
 
   .running-line-top {
     top: 774px;
